add products page completed without db

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -1,8 +1,8 @@
 <section>
   <div class="container">
-        <div class="row">
-           <a href="admin/add-products" class="btn btn-success mt-3 ml-5">Add Products</a>
- 
+
+        <div class="row justify-flex-end">
+           <a href="/admin/add-products" class="btn btn-success mt-3 btn-fit-content" >Add Products</a>
         </div>
     </div>  
     <div class="container">
